--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       run: dotnet restore
     - name: Install dependencies
       run: dotnet restore
-      working-directory: JackHenryCodeExercise/JackHenryCodeExercise.sln
+      working-directory: JackHenryCodeExercise/
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build JackHenryCodeExercise.sln --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test JackHenryCodeExercise.sln --no-build --verbosity normal
